fixed overflow bug

--- a/src/components/modules/RideFeed/RideFeed.css
+++ b/src/components/modules/RideFeed/RideFeed.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column;
   width: 70%;
-  height: 95%;
+  height: 100%;
   overflow-y: auto;
 }
 
