--- a/src/components/pages/RiderPage/RiderPage.css
+++ b/src/components/pages/RiderPage/RiderPage.css
@@ -1,6 +1,6 @@
 .rider-wrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #f7f9fc;
   display: flex;
 }
@@ -9,7 +9,7 @@
   margin-top: 38px;
   margin-left: 30px;
   width: 100%;
-  height: 100%;
+  height: 95%;
   font-family: "Source Sans Pro", sans-serif;
   display: flex;
   flex-flow: column;
@@ -54,7 +54,6 @@
   flex-flow: row;
   width: 100%;
   height: 100%;
-  overflow-y: auto;
   margin-top: 10px;
   background-color: #f7f9fc;
 }
